--- a/sandbox.target.properties
+++ b/sandbox.target.properties
@@ -36,3 +36,11 @@
 #<String>server2.domain.com</String>\
 #<String>server3.domain.com</String>\
 #</List>
+
+# Snowflake Connector Sandbox
+#######################################################
+%%Snowflake_User%%=KHUSBU67
+%%Snowflake_Password%%=1:ACP:9SuRjXKq+bhQi5ImIOH2LhNJz/+cYDDEK9O61IdtkIA=
+%%Snowflake_DBURL%%=jdbc:snowflake://CZBQPPR-VFC27533.snowflakecomputing.com/?db=SNOWFLAKE
+
+
