--- a/sandbox.target.properties
+++ b/sandbox.target.properties
@@ -39,8 +39,8 @@
 
 # Snowflake Connector Sandbox
 #######################################################
-%%Snowflake_User%%=KHUSBU67
-%%Snowflake_Password%%=1:ACP:9SuRjXKq+bhQi5ImIOH2LhNJz/+cYDDEK9O61IdtkIA=
-%%Snowflake_DBURL%%=jdbc:snowflake://CZBQPPR-VFC27533.snowflakecomputing.com/?db=SNOWFLAKE
+%%Snowflake_Sandbox_User%%=KHUSBU67
+%%Snowflake_Sandbox_Password%%=1:ACP:9SuRjXKq+bhQi5ImIOH2LhNJz/+cYDDEK9O61IdtkIA=
+%%Snowflake_Sandbox_DBURL%%=jdbc:snowflake://CZBQPPR-VFC27533.snowflakecomputing.com/?db=SNOWFLAKE
 
 
