Added Tokenization for Sandbox

--- a/sandbox.target.properties
+++ b/sandbox.target.properties
@@ -36,3 +36,9 @@
 #<String>server2.domain.com</String>\
 #<String>server3.domain.com</String>\
 #</List>
+
+# Snowflake Connectors Sandbox
+#######################################################
+%%Snowflake_Sandbox_Users%%=khimkunwar
+%%Snowflake_Sandbox_Password%%=1:ACP:Qls/j6HR9oWTzPrFerdjsZMqnDqU4DZ5+U6FI6Yg3bc=
+%%Snowflake_Sandbox_DBURL%%=jdbc:snowflake://IBFLQRL-RCC02103.snowflakecomputing.com/?db=SAILPOINT_USERS_DB
