Added Tokenization for Sandbox

--- a/sandbox.target.properties
+++ b/sandbox.target.properties
@@ -42,3 +42,4 @@
 %%Snowflake_Sandbox_Users%%=khimkunwar
 %%Snowflake_Sandbox_Password%%=1:ACP:Qls/j6HR9oWTzPrFerdjsZMqnDqU4DZ5+U6FI6Yg3bc=
 %%Snowflake_Sandbox_DBURL%%=jdbc:snowflake://IBFLQRL-RCC02103.snowflakecomputing.com/?db=SAILPOINT_USERS_DB
+%%Snowflake_Sandbox_SQL%%=select * from IDENTIFIER('&quot;SAILPOINT_USERS_DB&quot;.&quot;PUBLIC&quot;.&quot;SAILPOINT_EMPLOYEES&quot;') limit 100
