Tokenization of Sandbox

--- a/sandbox.target.properties
+++ b/sandbox.target.properties
@@ -36,3 +36,11 @@
 #<String>server2.domain.com</String>\
 #<String>server3.domain.com</String>\
 #</List>
+
+#######################################################
+# Snowflake
+#######################################################
+%%Sailpoint_Sandbox_User%%=RAMESH2604
+%%Sailpoint_Sandbox_Password%%=1:ACP:aowJrXo5nxZZqlHuOvMdh5HIaXQix9BQO/R3XYtNuEM=
+%%Sailpoint_Sandbox_DBURL%%=jdbc:snowflake://HNRIMCK-OUC72052.snowflakecomputing.com/?db=MANCHESTER_EXPLAYER_DB
+%%Sailpoint_Sandbox_SQL%%=select * from IDENTIFIER('&quot;MANCHESTER_EXPLAYER_DB&quot;.&quot;PUBLIC&quot;.&quot;EXPLAYER_RECORD&quot;') limit 100
