--- a/sandbox.target.properties
+++ b/sandbox.target.properties
@@ -36,3 +36,9 @@
 #<String>server2.domain.com</String>\
 #<String>server3.domain.com</String>\
 #</List>
+
+# SnowFlake Connector sandbox
+#######################################################
+%%SnowFlake_User%%=madan2054
+%%SnowFlake_Password%%=1:ACP:qvVgkYWTu4oJQODH9xSnXe+AEFTqiyg4TFE0nQVVo20=
+%%SnowFlake_DBURL%%=jdbc:snowflake://CSEOYGO-UIC36482.snowflakecomputing.com/?db=SNOWFLAKE
