--- a/sandbox.target.properties
+++ b/sandbox.target.properties
@@ -39,6 +39,6 @@
 
 # SnowFlake Connector sandbox
 #######################################################
-%%SnowFlake_User%%=madan2054
-%%SnowFlake_Password%%=1:ACP:qvVgkYWTu4oJQODH9xSnXe+AEFTqiyg4TFE0nQVVo20=
-%%SnowFlake_DBURL%%=jdbc:snowflake://CSEOYGO-UIC36482.snowflakecomputing.com/?db=SNOWFLAKE
+%%SnowFlake_Sandbox_User%%=madan2054
+%%SnowFlake_Sandbox_Password%%=1:ACP:qvVgkYWTu4oJQODH9xSnXe+AEFTqiyg4TFE0nQVVo20=
+%%SnowFlake_Sandbox_DBURL%%=jdbc:snowflake://CSEOYGO-UIC36482.snowflakecomputing.com/?db=SNOWFLAKE
