--- a/sandbox.target.properties
+++ b/sandbox.target.properties
@@ -36,3 +36,9 @@
 #<String>server2.domain.com</String>\
 #<String>server3.domain.com</String>\
 #</List>
+
+# Snowflake Connectors
+#######################################################
+%%Snowflake_User%%=guptapreety597
+%%Snowflake_Password%%=1:ACP:cGzUU9BiyvpP8Gm1DQ8kC2CxOfOU9l8PM4lUHVbQqdw=
+%%Snowflake_DBURL%%=jdbc:snowflake://OQGHWZM-VXC06794.snowflakecomputing.com/?db=SAILPOINT_USERS
